--- a/api-front/src/app/principal/principal.component.html
+++ b/api-front/src/app/principal/principal.component.html
@@ -1,9 +1,9 @@
 <form>
   <img src="/assets/cliente.png" alt="cliente">
 
-  <input type="text" placeholder="Nome" class="form-control">
-  <input type="number" placeholder="Idade" class="form-control">
-  <input type="text" placeholder="Cidade" class="form-control">
+  <input type="text" placeholder="Nome" class="form-control" name="nome" [(ngModel)]="cliente.nome">
+  <input type="number" placeholder="Idade" class="form-control" name="idade" [(ngModel)]="cliente.idade">
+  <input type="text" placeholder="Cidade" class="form-control" name="cidade" [(ngModel)]="cliente.cidade">
 
   <input type="button" value="Cadastrar" *ngIf="btnCadastro" class="btn btn-primary">
   <input type="button" value="Alterar" *ngIf="!btnCadastro" class="btn btn-warning">
@@ -12,6 +12,7 @@
 
 
 </form>
+<h1>{{cliente | json}}</h1>
 
 <table class="table">
   <thead>
@@ -23,5 +24,13 @@
       <th>Selecionar</th>
     </tr>
   </thead>
-  <tbody></tbody>
+  <tbody>
+    <tr *ngFor="let cliente of clientes; index as indice">
+      <td>{{indice+1}}</td>
+      <td>{{cliente.nome}}</td>
+      <td>{{cliente.idade}}</td>
+      <td>{{cliente.cidade}}</td>
+      <td><button class="btn btn-success">Selecionar</button></td>
+    </tr>
+  </tbody>
 </table>
